--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,8 @@
             <split-area 
               [size]="layout.size.side"  order="2">
 
-                <split  direction="vertical" 
+                <split  direction="vertical"
+                        gutterColor="#8AA8C0"
                         [gutterSize]="layout.gutter" 
                         [useTransition]="layout.useTransition">
 
