--- a/src/app/ui-components/editors/editor/editor.component.html
+++ b/src/app/ui-components/editors/editor/editor.component.html
@@ -8,8 +8,8 @@
 	<!-- https://bertrandg.github.io/angular-split/#/documentation -->
 	<split  *ngIf="isVisible"
 			  direction="horizontal" 
-			  gutterColor="#8AA8C0"
-              [gutterSize]="3" 
+			  gutterColor="white"
+              [gutterSize]="7" 
               [useTransition]="true">
 
 		<split-area [visible]="isVisible" [size]="20" order="1">
