--- a/src/app/ui-components/layout/panel/panel.component.scss
+++ b/src/app/ui-components/layout/panel/panel.component.scss
@@ -8,7 +8,7 @@
 	border-bottom: 1px solid $color2;
 	background-color: $color1;
 	color: white; 
-	font-weight: bold;
+	//font-weight: bold;
 	height: $header-height; 
 	line-height: $header-height; 
 	font-size: 14px; 
