--- a/src/app/ui-components/editors/procedure-editor/procedure-editor.component.html
+++ b/src/app/ui-components/editors/procedure-editor/procedure-editor.component.html
@@ -23,14 +23,14 @@
 								  		class="tree-node-wrapper">
 								  		<div class = "full-container" (click)="focus($event, prod)">
 
-											<div class = "seg3" *ngIf="prod.data.getType() != 'Else' && prod.data.getType() != 'If'">
+											<!--<div class = "seg3" *ngIf="prod.data.getType() != 'Else' && prod.data.getType() != 'If'">
 					    					   	<button mat-button 
 												    *ngIf="prod.data.getType() =='Action'"
 													(click)="openHelp($event, prod)">
 													<mat-icon>help_outline</mat-icon>
 												</button>
 
-						    				</div>
+						    				</div>-->
 								  			<div class = "seg1" 
 								  				[class.error]="prod.data.hasError" 
 								  				[class.print]="prod.data.printToConsole()"
@@ -41,7 +41,7 @@
 													<div class='procedure-item'>
 														<input matInput class="tree-input" 
 														[(ngModel)]="prod.data.getLeftComponent().expression" #ctrl="ngModel" required
-														(change)="updateProcedure($event, prod, 'left')">
+														(change)="updateProcedure($event, prod, 'left')" spellcheck="false">
 
 														<!-- <input width=50 class="tree-input" [(ngModel)]="prod.data.getLeftComponent().expression" #ctrl="ngModel" required
 														(change)="updateProcedure($event, prod, 'left')"> -->
@@ -49,7 +49,7 @@
 											
 														<input matInput class="tree-input" 
 														[(ngModel)]="prod.data.getRightComponent().expression" #ctrl="ngModel" required
-														(change)="updateProcedure($event, prod, 'right')">
+														(change)="updateProcedure($event, prod, 'right')" spellcheck="false">
 
 														<!-- <input width=50 class="tree-input" [(ngModel)]="prod.data.getRightComponent().expression" #ctrl="ngModel" required
 														(change)="updateProcedure($event, prod, 'right')"> -->
@@ -65,7 +65,7 @@
 												<div *ngIf="prod.data.getType() == 'If'">
 													<div class='procedure-item'>
 													 <span>if</span> ( <input matInput class="tree-input"  [(ngModel)]="prod.data.getLeftComponent().expression" #ctrl="ngModel" required
-														(change)="updateProcedure($event, prod, 'left')"> )
+														(change)="updateProcedure($event, prod, 'left')" spellcheck="false"> )
 													</div>
 												</div>
 
@@ -78,9 +78,9 @@
 												<div *ngIf="prod.data.getType() == 'For Loop'">
 													<div class='procedure-item'>
 													 <span>for (</span> 
-													  <input matInput class="tree-input"  [(ngModel)]="prod.data.getLeftComponent().expression" #ctrl="ngModel" required (change)="updateProcedure($event, prod, 'left')">
+													  <input matInput class="tree-input"  [(ngModel)]="prod.data.getLeftComponent().expression" #ctrl="ngModel" required (change)="updateProcedure($event, prod, 'left')" spellcheck="false">
 													 <span>in</span>  
-													  <input matInput class="tree-input" [(ngModel)]="prod.data.getRightComponent().expression" #ctrl="ngModel" required (change)="updateProcedure($event, prod, 'right')"> 
+													  <input matInput class="tree-input" [(ngModel)]="prod.data.getRightComponent().expression" #ctrl="ngModel" required (change)="updateProcedure($event, prod, 'right')" spellcheck="false"> 
 													  )
 													</div>
 												</div>
@@ -88,7 +88,7 @@
 												<div *ngIf="prod.data.getType() == 'Action'">
 													<div class='procedure-item'>
 														<input matInput class="tree-input" [(ngModel)]="prod.data.getLeftComponent().expression" #ctrl="ngModel" required
-														(change)="updateProcedure($event, prod, 'left')">
+														(change)="updateProcedure($event, prod, 'left')" spellcheck="false">
 														
 
 														<span class="equal">=</span>
@@ -105,7 +105,7 @@
 																	 [(ngModel)]="prod.data.getRightComponent().params[i].value"
 																	 #ctrl="ngModel" 
 																	 required
-																	 (change)="updateProcedure($event, prod, 'right')">
+																	 (change)="updateProcedure($event, prod, 'right')" spellcheck="false">
 
 																	<span *ngIf='i<prod.data.getRightComponent().params.length-1'>,</span>
 																	<!-- <input width=50 class="tree-input" [(ngModel)]="p" 
@@ -123,6 +123,11 @@
 											</div>
 
 											<div class = "seg2" *ngIf="prod.data.getType() != 'Else' && prod.data.getType() != 'If'">
+												<button mat-button 
+												    *ngIf="prod.data.getType() =='Action'"
+													(click)="openHelp($event, prod)">
+													<mat-icon>help_outline</mat-icon>
+												</button>
 											   <button mat-button
 											   		(click)="togglePrint(prod.data)" 
 											   		matTooltip="Print value to console"
