--- a/src/app/ui-components/layout/panel/panel.component.html
+++ b/src/app/ui-components/layout/panel/panel.component.html
@@ -1,5 +1,5 @@
 <div class="header">
-	<div class="title">{{heading}}</div>
+	<div class="title">{{heading}}{{_selectedNodeName}}</div>
 	<div class="data"></div>
 	<div class="btn-group">
 		<div (click)="maximize()">
