--- a/src/app/ui-components/viewers/viewer-container/viewer-container.component.html
+++ b/src/app/ui-components/viewers/viewer-container/viewer-container.component.html
@@ -38,4 +38,5 @@
 	<app-text-viewer *ngIf="group.value == 2"></app-text-viewer>
 	<app-console *ngIf="group.value == 3"></app-console>
 	<app-help-viewer *ngIf="group.value == 4"></app-help-viewer>
+	<app-info-viewer *ngIf="group.value == 5"></app-info-viewer>
 </div>
