--- a/src/app/ui-components/editors/editor/editor.component.html
+++ b/src/app/ui-components/editors/editor/editor.component.html
@@ -10,7 +10,8 @@
 			  direction="horizontal" 
 			  gutterColor="white"
               [gutterSize]="7" 
-              [useTransition]="true">
+              [useTransition]="true"
+              >
 
 		<split-area [visible]="isVisible" [size]="20" order="1">
 			<app-modulebox></app-modulebox>
