--- a/src/app/ui-components/viewers/help-viewer/help-viewer.component.html
+++ b/src/app/ui-components/viewers/help-viewer/help-viewer.component.html
@@ -23,8 +23,21 @@
 			 		<div class = "content">
 				 		<h4 mat-line>{{fn.name}}</h4>
 	    				<p mat-line>{{fn.signatures[0].comment.shortText}}</p>
+					
+						<!-- @derek: parameters-->
+						<div  mat-line *ngIf='fn.signatures[0].parameters'>
+							<div *ngFor="let pa of fn.signatures[0].parameters">
+								<span>Name: {{pa.name}}</span>
+								<!-- <span *ngIf="pa.type">Type: {{pa.type.type}}</span> -->
+								<span *ngIf="pa.comment">Description: {{pa.comment.text}}</span>
+							</div>
+						</div>
+
 	    				<p mat-line>Returns: {{fn.signatures[0].comment.returns}}</p>
-	    				<p mat-line><a href="https://phtj.github.io/gs-modelling/docs/modules/{{getUrl(m.name, fn.name)}}" target="_blank">More</a></p>
+	    				<p mat-line>	
+	    					<a href="https://phtj.github.io/gs-modelling/docs/modules/{{getUrl(m.name, fn.name)}}" target="_blank">More</a>
+	    				</p>
+
     				</div>
 			 	</mat-list-item>
 			 	<mat-divider></mat-divider>
