help viewer title changed

--- a/src/app/ui-components/viewers/help-viewer/help-viewer.component.html
+++ b/src/app/ui-components/viewers/help-viewer/help-viewer.component.html
@@ -1,6 +1,6 @@
 <div class="viewer">
 	
-	<h1> Welcome to Mobius! </h1>
+	<h1>Möbius Functions</h1>
 	<!-- <div class="iframe-container">
 		<iframe [src]="_url" frameborder="0"></iframe>
 	</div> -->
