--- a/src/app/ui-components/viewers/info-viewer/info-viewer.component.html
+++ b/src/app/ui-components/viewers/info-viewer/info-viewer.component.html
@@ -9,7 +9,7 @@
     </p>
 
     <h3 style="text-align: center;">
-       Get Started with Möbius
+       Getting started with Möbius
     </h3>
     <p style="text-align: center;">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/285M8St3WHQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
@@ -77,7 +77,7 @@
         <img
             width="600"
             height="310"
-            src="../assets/img/info/image002.png"
+            src="./assets/img/info/image002.png"
         />
     </p>
     <h2>
@@ -100,7 +100,7 @@
         <img
             width="249"
             height="91"
-            src="../assets/img/info/image004.jpg"
+            src="./assets/img/info/image004.jpg"
         />
     </p>
     <p>
@@ -119,7 +119,7 @@
         <img
             width="186"
             height="193"
-            src="../assets/img/info/image006.jpg"
+            src="./assets/img/info/image006.jpg"
         />
     </p>
     <p>
@@ -130,7 +130,7 @@
         <img
             width="165"
             height="166"
-            src="../assets/img/info/image008.jpg"
+            src="./assets/img/info/image008.jpg"
         />
     </p>
     <p>
@@ -212,7 +212,7 @@
         <img
             width="201"
             height="152"
-            src="../assets/img/info/image010.jpg"
+            src="./assets/img/info/image010.jpg"
         />
     </p>
     <p>
@@ -284,12 +284,12 @@
         <img
             width="82"
             height="117"
-            src="../assets/img/info/image012.jpg"
+            src="./assets/img/info/image012.jpg"
         />
         <img
             width="294"
             height="112"
-            src="../assets/img/info/image014.jpg"
+            src="./assets/img/info/image014.jpg"
         />
     </p>
     <p>
@@ -325,7 +325,7 @@
         <img
             width="202"
             height="189"
-            src="../assets/img/info/image016.jpg"
+            src="./assets/img/info/image016.jpg"
         />
     </p>
     <p>
@@ -339,12 +339,12 @@
         <img
             width="132"
             height="219"
-            src="../assets/img/info/image018.jpg"
+            src="./assets/img/info/image018.jpg"
         />
         <img
             width="77"
             height="100"
-            src="../assets/img/info/image020.jpg"
+            src="./assets/img/info/image020.jpg"
         />
     </p>
     <p>
@@ -368,7 +368,7 @@
         <img
             width="217"
             height="70"
-            src="../assets/img/info/image022.jpg"
+            src="./assets/img/info/image022.jpg"
         />
     </p>
 
