--- a/src/app/ui-components/editors/flowchart-viewer/flowchart-viewer.component.scss
+++ b/src/app/ui-components/editors/flowchart-viewer/flowchart-viewer.component.scss
@@ -157,7 +157,7 @@ split-area{
 					cursor: move;
 
 					&.disabled{
-						background-color: $pcolor5;
+						opacity: 0.4;
 					}
 
 					&.selected{
