--- a/src/app/ui-components/editors/parameter-editor/parameter-editor.component.html
+++ b/src/app/ui-components/editors/parameter-editor/parameter-editor.component.html
@@ -38,8 +38,12 @@
 									<select (change)="updateType($event.target.value, inp)">
 										         	    <option *ngFor="let x of inputPortOpts" [value]="x" [selected]="inp.getType() == x">{{getInputTypeName(x)}}</option>
 										            </select>
+	
 								</span>
+
 							</div>
+
+							
 
 							<!-- <div class='row'>
 								<span class='content' contenteditable="true" (blur)="updateDefaultValue($event, inp)">
@@ -49,6 +53,7 @@
 							</div>	 -->
 						</div>			
 						<div class="controls">
+							<mat-icon (click)='openSettingsDialog(inp)'>settings</mat-icon>
 					        <button mat-button (click)='deletePort($event, "input", i)'>
 					    		<mat-icon>delete</mat-icon>
     					    </button>
