help docs split

--- a/src/app/ui-components/help/info-viewer/info-viewer.component.scss
+++ b/src/app/ui-components/help/info-viewer/info-viewer.component.scss
@@ -6,5 +6,10 @@
 	padding: $default-side-padding;
 	height: auto;
 	overflow: auto;
+
+	.panel-content{
+		max-height: 700px;
+		overflow: auto;
+	}
 	
 }
