--- a/src/app/gs-viewer/toolwindow/toolwindow.component.css
+++ b/src/app/gs-viewer/toolwindow/toolwindow.component.css
@@ -42,6 +42,9 @@
 .visible{
   color: grey;
 }
+.selectvisible{
+  color: grey;
+}
 #table{
   width:100% ;
   height: 15px;
@@ -57,4 +60,9 @@
 }
 .selectid{
   background-color:#66CCFF;
+}
+#select{
+  position: relative;
+  float:right;
+  margin-right: 30px;
 }
