--- a/src/app/gs-viewer/setting/setting.component.css
+++ b/src/app/gs-viewer/setting/setting.component.css
@@ -1,33 +1,77 @@
 #settingview{
   position:absolute;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: white;
   top:0px;
   right:30px;
-  color:white;
-  width:380px;
-  height:200px;
+  color:#395d73;
+  width:400px;
+  height:430px;
 }
 #grid{
   margin-left: 20px;
+  font-family:sans-serif;
 }
 #axis{
   margin-left: 30px;
+  font-family:sans-serif;
 }
 #shadow{
   margin-left: 30px;
+  font-family:sans-serif;
 }
 #frame{
   margin-left: 30px;
+  font-family:sans-serif;
 }
 #huerange{
   margin-left: 41px;
   width: 60%;
+  font-family:sans-serif;
 }
 #satrange{
   margin-left: 18px;
   width: 60%;
+  font-family:sans-serif;
 }
 #lirange{
   margin-left: 20px;
   width: 60%;
+  font-family:sans-serif;
 }
+#oprange{
+  margin-left: 20px;
+  width: 60%;
+  font-family:sans-serif;
+}
+
+#name{
+  font-family:sans-serif;
+}
+#redrange{
+  margin-left: 60px;
+  width: 60%;
+  font-family:sans-serif;
+}
+#greenrange{
+  margin-left: 60px;
+  width: 60%;
+  font-family:sans-serif;
+}
+#bluerange{
+  margin-left: 60px;
+  width: 60%;
+  font-family:sans-serif;
+}
+
+::ng-deep .mat-accent .mat-slider-thumb {
+    background-color: #395d73;
+    font-family:sans-serif;
+} 
+::ng-deep .mat-accent .mat-slider-thumb-label {
+    background-color: #395d73;
+    font-family:sans-serif;
+} 
+::ng-deep .mat-accent .mat-slider-track-fill {
+    background-color: #395d73;
+    font-family:sans-serif;
+} 
