--- a/src/app/gs-viewer/toolwindow/toolwindow.component.html
+++ b/src/app/gs-viewer/toolwindow/toolwindow.component.html
@@ -1,16 +1,22 @@
 <div id="toolwindow">
   <div id="toolbar">
-    <button id="point" [class.visible]="Visible === 'point'" (click)="point(Visible)"><i class="fa fa-dot-circle-o"></i></button>
-    <button id="vertice" [class.visible]="Visible === 'vertice'" (click)="vertice(Visible)">V</button>
-    <button id="edge" [class.visible]="Visible === 'edge'" (click)="edge(Visible)">E</button>
-    <button id="wire" [class.visible]="Visible === 'wire'" (click)="wire(Visible)">W</button>
-    <button id="face" [class.visible]="Visible === 'face'" (click)="face(Visible)">F</button>
-    <button id="object" [class.visible]="Visible === 'object'" (click)="object(Visible)"><i class="fa fa-map"></i></button>
+    <button id="point" [class.visible]="Visible === 'Points'" (click)="point(Visible)"><i class="fa fa-dot-circle-o"></i></button>
+    <button id="vertice" [class.visible]="Visible === 'Vertices'" (click)="vertice(Visible)">V</button>
+    <button id="edge" [class.visible]="Visible === 'Edges'" (click)="edge(Visible)">E</button>
+    <button id="wire" [class.visible]="Visible === 'Wires'" (click)="wire(Visible)">W</button>
+    <button id="face" [class.visible]="Visible === 'Faces'" (click)="face(Visible)">F</button>
+    <button id="object" [class.visible]="Visible === 'Objs'" (click)="object(Visible)"><i class="fa fa-map"></i></button>
     <input id="selected" type="checkbox" (click)="changeselected()">
     <label id="selectedname" value="selected">Show selected only</label>
+    <div id="select">
+      <button id="vertice" [class.selectvisible]="SelectVisible === 'Vertices'" (click)="verticeselect(SelectVisible)">V</button>
+      <button id="edge" [class.selectvisible]="SelectVisible === 'Edges'" (click)="edgeselect(SelectVisible)">E</button>
+      <button id="wire" [class.selectvisible]="SelectVisible === 'Wires'" (click)="wireselect(SelectVisible)">W</button>
+      <button id="face" [class.selectvisible]="SelectVisible === 'Faces'" (click)="faceselect(SelectVisible)">F</button>
+    </div>
   </div>
   <div id="toolview">
-    <div *ngIf="Visible === 'point'">
+    <div *ngIf="Visible === 'Points'">
       <table border="1" cellspacing="0" cellpadding="0" id="table" name="table" bordercolor="#d0d0d0">
         <tr>
           <td name="Number" align=center width="40%" align=center>ID</td>
@@ -28,19 +34,21 @@
         </tr>
       </table>
     </div>
-    <div *ngIf="Visible === 'vertice'">
-      <table border="1" cellspacing="0" cellpadding="0" bordercolor="#d0d0d0" width="40%">
+    <div *ngIf="Visible === 'Vertices'">
+      <table border="1" cellspacing="0" cellpadding="0" bordercolor="#d0d0d0" width="50%">
         <tr>
-          <td  align=center >Vertices Lable</td>
+          <td  align=center width="25%">Vertices Lable</td>
+          <td  align=center width="25%">Points ID</td>
         </tr>
       </table>
-      <table border="1" cellspacing="0" cellpadding="0" bordercolor="#d0d0d0" *ngFor="let datascale of attribute" width="40%">
+      <table border="1" cellspacing="0" cellpadding="0" bordercolor="#d0d0d0" *ngFor="let datascale of attribute" width="50%">
         <tr>
-          <button id="numberbutton">{{datascale.id}}</button>
+          <button id="numberbutton" [class.selectid]="ID == datascale.id" (click)=clicktoshow(datascale.id)>{{datascale.id}}</button>
+          <td  align=center  width="50%">{{datascale.pointid}}</td>
         </tr>
       </table>
     </div>
-    <div *ngIf="Visible === 'edge'">
+    <div *ngIf="Visible === 'Edges'">
       <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" width="40%">
         <tr>
           <td  align=center>Edge ID</td>
@@ -48,11 +56,12 @@
       </table>
       <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" *ngFor="let datascale of attribute" width="40%">
         <tr>
-          <button id="numberbutton" >{{datascale.id}}</button>
+          <!-- <button id="numberbutton"[class.selectid]="ID == datascale.id" (click)=clicktoshow(datascale.id) >{{datascale.id}}</button> -->
+          <button id="numberbutton">{{datascale}}</button>
         </tr>
       </table>
     </div>
-    <div *ngIf="Visible === 'wire'">
+    <div *ngIf="Visible === 'Wires'">
       <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" width="40%">
         <tr>
           <td  align=center>Wire ID</td>
@@ -60,11 +69,11 @@
       </table>
       <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" *ngFor="let datascale of attribute" width="40%">
         <tr>
-          <button id="numberbutton" >{{datascale.id}}</button>
+          <button id="numberbutton" >{{datascale}}</button>
         </tr>
       </table>
     </div>
-    <div *ngIf="Visible === 'face'">
+    <div *ngIf="Visible === 'Faces'">
       <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" width="40%">
         <tr>
           <td  align=center>Face ID</td>
@@ -72,11 +81,11 @@
       </table>
       <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" *ngFor="let datascale of attribute" width="40%">
         <tr>
-          <button id="numberbutton" >{{datascale.id}}</button>
+          <button id="numberbutton" >{{datascale}}</button>
         </tr>
       </table>
     </div>
-    <div *ngIf="Visible === 'object'">
+    <div *ngIf="Visible === 'Objs'">
       <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" width="40%">
         <tr>
           <td name="Number" align=center  align=center>Object ID</td>
@@ -84,7 +93,7 @@
       </table>
       <table border="1" cellspacing="0" cellpadding="0"  bordercolor="#d0d0d0" *ngFor="let datascale of attribute " width="40%">
         <tr>
-          <button  id="numberbutton" >{{ datascale.id}}</button>
+          <button  id="numberbutton"  >{{datascale}}</button>
         </tr>
       </table>
     </div>
