--- a/src/app/ui-components/viewers/help-viewer/help-viewer.component.html
+++ b/src/app/ui-components/viewers/help-viewer/help-viewer.component.html
@@ -482,7 +482,7 @@
 
 						<div class="return-block">
 		    				<span class="topic">Returns: </span>
-		    				<span class="descr">{{fn.signatures[0].comment.returns}}</span>
+		    				<span class="descr" [innerHTML]="fn.signatures[0].comment.returns"></span>
 		    			</div>
 
 		    			
