--- a/src/app/gs-viewer/toolwindow/toolwindow.component.html
+++ b/src/app/gs-viewer/toolwindow/toolwindow.component.html
@@ -13,6 +13,7 @@
       <button id="edge" [class.selectvisible]="SelectVisible === 'Edges'" (click)="edgeselect(SelectVisible)">E</button>
       <button id="wire" [class.selectvisible]="SelectVisible === 'Wires'" (click)="wireselect(SelectVisible)">W</button>
       <button id="face" [class.selectvisible]="SelectVisible === 'Faces'" (click)="faceselect(SelectVisible)">F</button>
+      <button id="object" [class.selectvisible]="SelectVisible === 'Objs'" (click)="objectselect(SelectVisible)"><i class="fa fa-map"></i></button>
     </div>
   </div>
   <div id="toolview">
